feat(g722): implement G.722 wideband encoder via libspandsp FFM binding
Closes #5.

Implement G.722 ADPCM encoding in G722RtpCodec using the Foreign Function
and Memory (FFM) API to call libspandsp.so directly from Java 25.

Design:
- @ApplicationScoped CDI bean acts as a factory and availability probe.
- @PostConstruct probe() loads libspandsp.so via Arena.global(), resolves
  g722_encode_init and g722_encode as MethodHandles, and sets isAvailable=true.
- forCall() allocates a GC-managed Arena.ofAuto() and a 172-byte
  g722_encode_state_t segment, calls g722_encode_init to initialise the
  ADPCM predictor state, and returns a plain (non-CDI) per-call instance.
- encode(short[]) allocates confined per-frame input/output segments and
  calls g722_encode; 320 input samples produce exactly 160 output bytes.
- The CDI factory bean (stateSegment=null) throws IllegalStateException on
  encode(), guarding against accidental direct use.

Constants (RFC 3551 §4.5.2):
- Payload type: 9, RTP clock: 8 000 Hz, input rate: 16 000 Hz
- Samples/frame: 320 (20 ms), RTP timestamp increment: 160
- Preference: 50 (preferred over PCMA/PCMU when available)

Tests (G722RtpCodecTest):
- Codec constants verified without native library.
- Four libspandsp-dependent tests use assumeTrue and are skipped automatically
  when the library is not installed.
- Verifies encode of 320 silence samples yields 160 bytes.
- Verifies forCall() returns distinct instances (no shared ADPCM state).

Install libspandsp to activate G.722:
  Debian/Ubuntu: apt install libspandsp2
  Arch Linux:    pacman -S spandsp

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>